prevent overscrolling and drag on ios

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,6 +3,9 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  position: fixed;
+  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -26,6 +29,7 @@ body {
   text-align: center;
   background-image: url(/data/redSwirl.jpg);
   background-size: cover;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .blur {
